force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/SVMXC__ServiceMax_Processes__c.object-meta.xml
<CustomObject>
    <description>This object is used to define:
* ServiceMax modules
* ServiceMax SubModules
* Inventory Processes (standard and custom)
* Object Mappings for copying data between objects</description>
    <label>ServiceMax Process</label>
    <nameField>
        <displayFormat>PN-{0000000000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>