force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Action_Type__c</fullName>
    <description>Type of action launched from Service Flow Wizard</description>
    <inlineHelpText>Type of action launched from Service Flow Wizard</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BACKGROUND_EXEC</fullName>
            </value>
            <value>
                <fullName>SFM</fullName>
            </value>
            <value>
                <fullName>INVENTORY</fullName>
            </value>
            <value>
                <fullName>INITIATE_RETURN</fullName>
            </value>
            <value>
                <fullName>RECEIPT</fullName>
            </value>
            <value>
                <fullName>DELIVERY</fullName>
            </value>
            <value>
                <fullName>PICK_MOVE</fullName>
            </value>
            <value>
                <fullName>SHIP</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>OUTPUT_DOCUMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>