force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Allow_Override__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Allow_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>