force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__APL_Action_On_Less_Qty__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__APL_Action_On_Less_Qty__c</fullName>
    <description>Indicates the default action to be allowed/performed when the user enters less quantity than expected in a receipt/shipment transaction</description>
    <label>Action On Less Qty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>NOT ALLOWED</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
            <value>
                <fullName>DO NOTHING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>