force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__APL_Action_On_Unexpected_SN__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__APL_Action_On_Unexpected_SN__c</fullName>
    <description>Indicates the default action to be allowed/performed when an unexpected serial number is scanned in a receipt/shipment transaction</description>
    <label>Action On Unexpected SN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT ALLOWED</fullName>
            </value>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>REPLACE</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>