force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__APL_Create_Internal_RMA__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__APL_Create_Internal_RMA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether internal RMAs should be created automatically when shipping to internal locations or not</description>
    <label>Create Internal RMA</label>
    <type>Checkbox</type>
</CustomField>