force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__APL_Split_Lines__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__APL_Split_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if RMA Lines should be split automatically upon receipt when expected quantity is more than 1 in the line</description>
    <label>Split Lines</label>
    <type>Checkbox</type>
</CustomField>