force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Assign_To_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Assign_To_Dispatcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <label>Assign To Dispatcher</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>