force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Assign_To_Queue__c</fullName>
    <description>Internal use only</description>
    <label>Assign To Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>