force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Assign_To_Service_Team__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Assign_To_Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Assign To Team</label>
    <referenceTo>SVMXC__Service_Group__c</referenceTo>
    <relationshipLabel>ServiceMax Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>