force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Calendar_End_Days__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Calendar_End_Days__c</fullName>
    <description>Internal use only</description>
    <label>Calendar End Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>