force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Case_Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Case_Assign_To_Queue__c</fullName>
    <label>Case Assign To Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>