force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Consider_Location_From_Object__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Consider_Location_From_Object__c</fullName>
    <label>Consider Location From Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>