force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Custom_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Custom_Action_Type__c</fullName>
    <label>Custom Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Web-Service</fullName>
            </value>
            <value>
                <fullName>App-to-App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>