force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Dispatch_Method__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Dispatch_Method__c</fullName>
    <description>Internal use only</description>
    <label>Dispatch Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Optimized Batch</fullName>
            </value>
            <value>
                <fullName>Real Time Optimization</fullName>
            </value>
            <value>
                <fullName>Linx for ServicePower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>