force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Dispatch_Timezone__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Dispatch_Timezone__c</fullName>
    <label>Dispatch Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>