force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Enable_Child_Line_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Enable_Child_Line_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Child Line Entitlement</label>
    <type>Checkbox</type>
</CustomField>