force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Enable_Confirmation_Dialog__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Enable_Confirmation_Dialog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Confirmation Dialog</label>
    <type>Checkbox</type>
</CustomField>