force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Event_Type__c</fullName>
    <description>This field refers to event Type associated to Servicemax process</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
                <default>true</default>
                <label>Event</label>
            </value>
            <value>
                <fullName>ServiceMax Event</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>