force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Frequency__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Frequency__c</fullName>
    <description>Internal use only. Overloaded to store &quot;Start after hour&quot; for dispatch process definition.</description>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>