force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Invoice_Scope__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Invoice_Scope__c</fullName>
    <label>Invoice Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>Work Order and Case Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>