force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__IsGlobal__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGlobal</label>
    <type>Checkbox</type>
</CustomField>