force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__IsStandard__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the process is a standard ServiceMax process.</description>
    <inlineHelpText>Flag to indicate if the process is a standard ServiceMax process.</inlineHelpText>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>