force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__MapID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__MapID__c</fullName>
    <description>A unique Identification for each object map definition.</description>
    <inlineHelpText>A unique Identification for each object map definition.</inlineHelpText>
    <label>Map ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>