force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Match_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Match_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Match Account</label>
    <type>Checkbox</type>
</CustomField>