force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Module__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Process with Record type Module</description>
    <inlineHelpText>Select the module that the submodule is part of</inlineHelpText>
    <label>Module</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Submodules</relationshipLabel>
    <relationshipName>ServiceMax_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>