force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__MTTS_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__MTTS_Minutes__c</fullName>
    <description>Internal use only</description>
    <label>MTTS Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>