force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Name_Field__c</fullName>
    <label>Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>