force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Node_Parent_API__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Node_Parent_API__c</fullName>
    <description>Parent object API Name.</description>
    <inlineHelpText>Parent object API Name.</inlineHelpText>
    <label>Node Parent API</label>
    <length>150</length>
    <type>Text</type>
</CustomField>