force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Normalized_Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Normalized_Total_Distance__c</fullName>
    <description>Normalized Total Distance Weight</description>
    <formula>SVMXC__Weight_Total_Distance__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Normalized Total Distance Weight</inlineHelpText>
    <label>Normalized Total Distance Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>