force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Number_of_Lookup_Records__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Number_of_Lookup_Records__c</fullName>
    <description>Number of Lookup Records</description>
    <inlineHelpText>Number of Lookup Records</inlineHelpText>
    <label>Number of Lookup Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>