force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Parent_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Parent_Error_Msg__c</fullName>
    <description>Parent Error Msg</description>
    <inlineHelpText>Parent Error Msg</inlineHelpText>
    <label>Parent Error Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>