force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Parent_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Object</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Parent Object)</relationshipLabel>
    <relationshipName>Parent_Object</relationshipName>
    <type>Lookup</type>
</CustomField>