force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Parent_Object_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Parent_Object_Criteria__c</fullName>
    <description>WHERE clause of the parent selection criteria</description>
    <label>Parent Object Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>