force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__ProcessID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__ProcessID__c</fullName>
    <description>A unique Identification for each Process.</description>
    <inlineHelpText>A unique Identification for each Process.</inlineHelpText>
    <label>Process ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>