force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Purpose__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Purpose__c</fullName>
    <description>Indicate the purpose of ServiceMax Process.</description>
    <inlineHelpText>Indicate the purpose of ServiceMax Process.</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STANDALONE EDIT</fullName>
            </value>
            <value>
                <fullName>SOURCE TO TARGET ALL</fullName>
            </value>
            <value>
                <fullName>SOURCE TO TARGET CHILD</fullName>
            </value>
            <value>
                <fullName>GENERATE REPORT</fullName>
            </value>
            <value>
                <fullName>VIEW RECORD</fullName>
            </value>
            <value>
                <fullName>STANDALONE CREATE</fullName>
            </value>
            <value>
                <fullName>OUTPUT DOCUMENT</fullName>
            </value>
            <value>
                <fullName>CHECKLIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>