force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Schedule_Event__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Schedule_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Schedule Event</label>
    <type>Checkbox</type>
</CustomField>