force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Select_Template_At_Runtime__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Select_Template_At_Runtime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Template At Runtime</label>
    <type>Checkbox</type>
</CustomField>