force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Service_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Method_Name__c</fullName>
    <label>Service Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>