force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Service_Namespace__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Namespace__c</fullName>
    <label>Service Namespace</label>
    <length>40</length>
    <type>Text</type>
</CustomField>