force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Setting_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Setting_Unique_ID__c</fullName>
    <description>Unique ID of the setting across all modules. Derived by concatenating submodule ID and setting ID</description>
    <formula>SVMXC__Submodule__r.SVMXC__SubmoduleID__c  &amp; &quot;_&quot; &amp;  SVMXC__SettingID__c</formula>
    <inlineHelpText>Unique ID of the setting across all modules. Derived by concatenating submodule ID and setting ID</inlineHelpText>
    <label>Setting Unique ID</label>
    <type>Text</type>
</CustomField>