force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__SM_Drive_After_Shift_End__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Drive_After_Shift_End__c</fullName>
    <description>After the shift ends, technicians should drive on their own time for up to (Minutes)</description>
    <inlineHelpText>After the shift ends, technicians should drive on their own time for up to (Minutes)</inlineHelpText>
    <label>Drive time after shift end (in mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>