force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__SM_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Process_Type__c</fullName>
    <description>Field to store process type value for PM process</description>
    <inlineHelpText>Field to store process type value for PM process</inlineHelpText>
    <label>Process Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>