force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__SM_Run_Targeted_Sync__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Run_Targeted_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is true for a SFM process, targeted sync is run on FSA client when a technician saves the record.</description>
    <inlineHelpText>When this field is true for a SFM process, targeted sync is run on FSA client when a technician saves the record.</inlineHelpText>
    <label>Run Targeted Sync</label>
    <type>Checkbox</type>
</CustomField>