force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__SM_Section__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>SVMXC__Page_Layout_Detail__c</referenceTo>
    <relationshipLabel>ServiceMax Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>