force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Source_Key__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Source_Key__c</fullName>
    <description>This key is uesed to locate SourceChild when TargetChild is created.</description>
    <label>Source Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>