force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Submodule__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Submodule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ServiceMax sub module in which this setting is used. Lookup to ServiceMax process: Record Type &apos;Submodule&apos;.</description>
    <inlineHelpText>ServiceMax sub module in which this setting is used. Lookup to ServiceMax process: Record Type &apos;Submodule&apos;.</inlineHelpText>
    <label>Submodule</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Processes (Submodule)</relationshipLabel>
    <relationshipName>ServiceMax_Processes_Submodule</relationshipName>
    <type>Lookup</type>
</CustomField>