force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Tag_Keys__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Tag_Keys__c</fullName>
    <label>Tag Keys</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>