force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Target_Object_label__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Target_Object_label__c</fullName>
    <label>Target Object label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>