force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Target_Type__c</fullName>
    <description>Indicates if the target URL is opened in the same window or a new window</description>
    <inlineHelpText>Indicates if the target URL is opened in the same window or a new window</inlineHelpText>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Window</fullName>
            </value>
            <value>
                <fullName>Existing Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>