force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Technician_User__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Technician_User__c</fullName>
    <description>Used in Work Order Pre-calculation trigger.</description>
    <formula>SVMXC__Assign_To_Technician__r.SVMXC__Salesforce_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician User</label>
    <type>Text</type>
</CustomField>