force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Tertiary_Consolidation_Rule_Case__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Tertiary_Consolidation_Rule_Case__c</fullName>
    <label>Tertiary Consolidation Rule Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>